优化加载效果

--- a/web/index.html
+++ b/web/index.html
@@ -148,7 +148,7 @@
                     <button type="button" class="btn btn-success" id="add_preview_button" onclick="add_preview_button_click()" style="margin-right: 10px">预览</button>
                     <button type="button" class="btn btn-success" id="add_preview_back_button" onclick="add_preview_back_button_click()" style="display: none; margin-right: 10px">编辑</button>
                     <button type="button" class="btn btn-primary" id="add_save_button" style="display: block" onclick="add_save_button_click()" style="margin-right: 10px">保存</button>
-                    <button type="button" class="btn btn-primary" id="add_saving_button" style="display:none; width: 58px; height: 38px" disabled><div class="spinner-border" role="status" style="width: 1.4rem; height: 1.4rem; margin-right: 10px"></div></button>
+                    <button type="button" class="btn btn-primary" id="add_saving_button" style="display:none; width: 58px; height: 38px" disabled><div class="spinner-border" role="status" style="width: 1.4rem; height: 1.4rem;"></div></button>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
                     <button type="button" class="btn btn-success" id="edit_preview_button" onclick="edit_preview_button_click()" style="margin-right: 10px">预览</button>
                     <button type="button" class="btn btn-success" id="edit_preview_back_button" onclick="edit_preview_back_button_click()" style="display: none; margin-right: 10px">编辑</button>
                     <button type="button" class="btn btn-primary" id="edit_save_button" style="display: block" onclick="edit_save_button_click()" style="margin-right: 10px">保存</button>
-                    <button type="button" class="btn btn-primary" id="edit_saving_button" style="display:none; width: 58px; height: 38px" disabled><div class="spinner-border" role="status" style="width: 1.4rem; height: 1.4rem; margin-right: 10px"></div></button>
+                    <button type="button" class="btn btn-primary" id="edit_saving_button" style="display:none; width: 58px; height: 38px" disabled><div class="spinner-border" role="status" style="width: 1.4rem; height: 1.4rem;"></div></button>
                 </div>
             </div>
         </div>
