优化前端搜索，移除编辑界面快捷按钮

--- a/web/index.html
+++ b/web/index.html
@@ -118,16 +118,16 @@
             </div>
             <div class="modal-body" style="padding-top: 8px; padding-bottom: 8px">
                     <input id="add_diary_time" class="form-control" style="max-width: 175px; background-color:white; box-shadow:none; float: left;" readonly placeholder="选择时间">
-                    <div id="add_shortcut_button" style="font-size: 20px; padding-right: 10px; padding-top: 5px; float: right">
-                        <i class="fas fa-images" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n![]()");window.open("http://picbed.wangshaogang.com/", "picbed")})()'></i>
-                        <i class="fas fa-hashtag" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "#")})()'></i>
-                        <i class="fas fa-quote-left" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "> ")})()'></i>
-                        <i class="fas fa-minus" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n---\n")})()'></i>
-                        <i class="fas fa-list" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n* \n* \n* ")})()'></i>
-                        <i class="fas fa-list-ol" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n1. \n2. \n3. ")})()'></i>
-                        <i class="fas fa-bold" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "****")})()'></i>
-                        <i class="fas fa-italic" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "**")})()'></i>
-                    </div>
+<!--                    <div id="add_shortcut_button" style="font-size: 20px; padding-right: 10px; padding-top: 5px; float: right">-->
+<!--                        <i class="fas fa-images" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n![]()");window.open("http://picbed.wangshaogang.com/", "picbed")})()'></i>-->
+<!--                        <i class="fas fa-hashtag" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "#")})()'></i>-->
+<!--                        <i class="fas fa-quote-left" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "> ")})()'></i>-->
+<!--                        <i class="fas fa-minus" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n-&#45;&#45;\n")})()'></i>-->
+<!--                        <i class="fas fa-list" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n* \n* \n* ")})()'></i>-->
+<!--                        <i class="fas fa-list-ol" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "\n1. \n2. \n3. ")})()'></i>-->
+<!--                        <i class="fas fa-bold" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "****")})()'></i>-->
+<!--                        <i class="fas fa-italic" onclick='(function(){$("#add_input_text").val($("#add_input_text").val() + "**")})()'></i>-->
+<!--                    </div>-->
                     <script>
                         //时间选择器
                         laydate.render({
@@ -164,16 +164,16 @@
             </div>
             <div class="modal-body" style="padding-top: 8px; padding-bottom: 8px">
                 <input id="edit_diary_time" class="form-control" style="max-width: 175px; background-color:white; box-shadow:none; float: left;" readonly placeholder="选择时间">
-                <div id="edit_shortcut_button" style="font-size: 20px; padding-right: 10px; padding-top: 5px; float: right">
-                    <i class="fas fa-images" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "\n![]()");window.open("http://picbed.wangshaogang.com/", "picbed")})()'></i>
-                    <i class="fas fa-hashtag" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "#")})()'></i>
-                    <i class="fas fa-quote-left" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "> ")})()'></i>
-                    <i class="fas fa-minus" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "\n---\n")})()'></i>
-                    <i class="fas fa-list" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "* \n* \n* ")})()'></i>
-                    <i class="fas fa-list-ol" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "1. \n2. \n3. ")})()'></i>
-                    <i class="fas fa-bold" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "****")})()'></i>
-                    <i class="fas fa-italic" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "**")})()'></i>
-                </div>
+<!--                <div id="edit_shortcut_button" style="font-size: 20px; padding-right: 10px; padding-top: 5px; float: right">-->
+<!--                    <i class="fas fa-images" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "\n![]()");window.open("http://picbed.wangshaogang.com/", "picbed")})()'></i>-->
+<!--                    <i class="fas fa-hashtag" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "#")})()'></i>-->
+<!--                    <i class="fas fa-quote-left" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "> ")})()'></i>-->
+<!--                    <i class="fas fa-minus" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "\n-&#45;&#45;\n")})()'></i>-->
+<!--                    <i class="fas fa-list" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "* \n* \n* ")})()'></i>-->
+<!--                    <i class="fas fa-list-ol" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "1. \n2. \n3. ")})()'></i>-->
+<!--                    <i class="fas fa-bold" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "****")})()'></i>-->
+<!--                    <i class="fas fa-italic" onclick='(function(){$("#edit_input_text").val($("#edit_input_text").val() + "**")})()'></i>-->
+<!--                </div>-->
                 <script>
                     //时间选择器
                     laydate.render({
